# gjournal

./: CMakeLists.txt  Makefile.am  configure.ac  gjournal.gresource.xml
cmake/: GResource.cmake
doc/: Doxyfile.in
src/: CMakeLists.txt  Makefile.am  cfg.hh  main.cc
src/gui/: Application.cc  Application.hh  DocumentHandler.cc  DocumentHandler.hh  DragHandler.cc  DragHandler.hh  JournalWidget.cc  JournalWidget.hh  MainMenu.cc  MainMenu.hh  MainWindow.cc  MainWindow.hh  PageLayout.cc  PageLayout.hh  PageWidget.cc  PageWidget.hh  PositionWidget.cc  PositionWidget.hh  PrintOperation.cc  PrintOperation.hh  ScrollHandler.cc  ScrollHandler.hh  SurfaceBuffer.cc  SurfaceBuffer.hh  ZoomHandler.cc  ZoomHandler.hh  ZoomLevel.hh  ZoomWidget.cc  ZoomWidget.hh
src/io/: XojReader.cc  XojReader.hh
src/model/: Background.cc  Background.hh  Color.cc  Color.hh  Document.cc  Document.hh  Element.cc  Element.hh  Image.cc  Image.hh  Layer.cc  Layer.hh  Page.cc  Page.hh  Pen.cc  Pen.hh  Point.cc  Point.hh  PressurePoint.cc  PressurePoint.hh  PressureStroke.cc  PressureStroke.hh  Rectangle.cc  Rectangle.hh  Stroke.cc  Stroke.hh  StrokeBase.hh  Text.cc  Text.hh
src/util/: Error.cc  Error.hh  Lambda.hh  Log.cc  Log.hh  ReadError.cc  ReadError.hh
ui/: main_window.ui  menus.ui
