CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
PROJECT(gjournal)

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(GTKMM3 REQUIRED gtkmm-3.0>=3.14)
PKG_CHECK_MODULES(LIBXML REQUIRED libxml++-2.6)

PKG_CHECK_MODULES(GIO REQUIRED gio-2.0)

IF(UNIX)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
ENDIF()

FIND_PACKAGE(Doxygen)

IF(DOXYGEN_FOUND)
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/doc/Doxyfile.in
    ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)

  ADD_CUSTOM_TARGET(doc
    ${DOXYGEN_EXECUTABLE}
    ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Generating API documentation with Doxygen"
    VERBATIM
    )

ENDIF(DOXYGEN_FOUND)

FIND_PACKAGE(Boost REQUIRED COMPONENTS
  system)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

INCLUDE(GResource)

ADD_SUBDIRECTORY(src)
